--- a/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.scss
+++ b/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.scss
@@ -10,24 +10,17 @@
     margin-right: auto;
 }
 
-.label {
-    //margin-top: 0.5em;
-    margin-top: 0.3em;
-}
-
 .image {
     float: right;
     //width: 30%;//50%
 }
 
-.buttons-bottom {
-    margin-top: 1em;
+.name{
+    font-weight: bold;
+    margin-right: 1em;
+}
+.theme{
+    font-weight: bold;
+    margin-right: 1em;
 }
 
-
-.quizName{
-    text-align: center;
-}
-.quizTheme{
-    text-align: center;
-}
