--- a/front-end/src/app/game/recap/recap.component.scss
+++ b/front-end/src/app/game/recap/recap.component.scss
@@ -4,7 +4,7 @@
 
 .box{
     margin-top: 20px;
-    height: 80%;//à revoir
+    //height: 80%;//à revoir
     width: 80%;
     margin-left: auto;
     margin-right: auto;
