--- a/front-end/src/app/core/quizzes/theme-form/theme-form.component.scss
+++ b/front-end/src/app/core/quizzes/theme-form/theme-form.component.scss
@@ -1,1 +1,7 @@
 @import 'src/styles/card.scss';
+@import "src/styles/variables";
+@import 'src/styles/images.scss';
+
+.button-bottom{
+    text-align: center;
+}
