--- a/front-end/src/styles/card.scss
+++ b/front-end/src/styles/card.scss
@@ -35,3 +35,11 @@
   height: 100%;
   text-align: center;
 }
+
+.delete{
+  position: absolute;
+  background-color: #555;
+  color: white;
+  font-size: 16px;
+  border: none;
+}
