--- a/front-end/src/app/game/runner/runner.component.scss
+++ b/front-end/src/app/game/runner/runner.component.scss
@@ -15,10 +15,10 @@
 .button-recap {
     padding: 0.5em 0;
     //font-size: 350%;
-    font-size: 200%;
+    font-size: 500%;
     margin-top: 5%;
     margin-bottom: 5%;
-    width: 80%;
+    //width: 80%;
     height: 50%;
     text-align: center;
     cursor: pointer;;
