--- a/front-end/src/app/core/players/player-list-player/player-list-player.component.html
+++ b/front-end/src/app/core/players/player-list-player/player-list-player.component.html
@@ -1,7 +1,7 @@
 <h1 class="title"> Sélectionner un profil </h1>
 <div class="player-list">
     <div class="card player fixed-container" *ngFor="let player of playerList">
-        <button class="button-card player" routerLink="./{{player.id}}">
+        <button class="player-card" routerLink="./{{player.id}}">
             <app-player [player]="player" (playerDeleted) = "deletePlayer($event)"></app-player>
         </button>
     </div>
