--- a/front-end/src/app/core/quizzes/quiz-list-player/quiz-list-player.component.scss
+++ b/front-end/src/app/core/quizzes/quiz-list-player/quiz-list-player.component.scss
@@ -1,9 +1,21 @@
 @import 'src/styles/card.scss';
 @import 'src/styles/layout.scss';
 
+.quiz {
+  padding: 0.5em;
+  @extend .vertical-layout;
+  text-align: center;
+}
+
 .quiz-list {
-  display: flex;
-  flex-wrap: wrap;
+  @extend .responsive-list;
+  text-align: center;
+}
+
+.quiz-card{
+  @extend .button-card;
+  @extend .quiz;
+  width: 100%;
 }
 
 #bouton {
