--- a/front-end/src/app/core/players/player-list-admin/player-list-admin.component.html
+++ b/front-end/src/app/core/players/player-list-admin/player-list-admin.component.html
@@ -10,7 +10,7 @@
         <button class="button-card delete" (click)="deletePlayer(player)">
             <i class="fas fa-times"></i>
         </button>
-        <button class="button-card player" routerLink= "./{{player.id}}"><!--/statistics">-->
+        <button class="player-card" routerLink= "./{{player.id}}"><!--/statistics">-->
             <app-player [player]="player" (playerDeleted) = "deletePlayer($event)"></app-player>
             <!--<button class = "button-card" routerLink= "./{{player.id}}">Modifier</button>-->
         </button>
