--- a/front-end/src/app/core/players/player-list-player/player-list-player.component.scss
+++ b/front-end/src/app/core/players/player-list-player/player-list-player.component.scss
@@ -2,19 +2,20 @@
 @import 'src/styles/layout.scss';
 
 .player-list {
-  display: flex;
-  flex-wrap: wrap;
-
+  @extend .responsive-list;
 }
 
 .player {
   padding: 0.5em;
-  display: flex;
-  flex-direction: column;
+  @extend .vertical-layout;
   text-align: center;
+}
 
-  align-items: center;
-  justify-content: center;
+
+.player-card{
+  @extend .button-card;
+  @extend .player;
+  width: 100%;
 }
 
 .button-player:hover {
