--- a/front-end/src/app/core/quizzes/quiz-list-admin/quiz-list-admin.component.scss
+++ b/front-end/src/app/core/quizzes/quiz-list-admin/quiz-list-admin.component.scss
@@ -1,21 +1,21 @@
 @import 'src/styles/card.scss';
 @import 'src/styles/layout.scss';
 
-.quiz-list {
-  display: flex;
-  flex-wrap: wrap;
-  //float: right;
+.quiz {
+  padding: 0.5em;
+  @extend .vertical-layout;
+  text-align: center;
 }
 
-.quiz {
-  display: flex;
-  flex-direction: column;
-
-  padding: 0.5em;
+.quiz-list {
+  @extend .responsive-list;
   text-align: center;
+}
 
-  align-items: center;
-  justify-content: center;
+.quiz-card{
+  @extend .button-card;
+  @extend .quiz;
+  width: 100%;
 }
 
 .button-quiz:hover {
