Ajouts CSS (runner fit content)

--- a/front-end/src/app/game/runner/runner.component.html
+++ b/front-end/src/app/game/runner/runner.component.html
@@ -1,6 +1,6 @@
 <button class="button-card" routerLink= "../..">Retour</button>
 
-<div class="box center" *ngIf = "quiz">
+<div class="box" *ngIf = "quiz">
     <!--<h2>-{{quiz.name}}-</h2>-->
     <div *ngIf = "currentQuestion; else elseBlock">
         <div class = "labelandimage">
