--- a/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.html
+++ b/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="new-question-form">
 	<form [formGroup]="questionForm">
 	<label class = "label" for="questionName">Intitulé : </label>&nbsp;
 	<input type="text" size = "{{sizeInput()}}" [formControlName]="'label'" id="questionName">
@@ -22,7 +22,7 @@
   </ng-template>
   
   <ng-template #displayImage>
-	<div class="frame image fixed-container" *ngIf="imageTmp.url">
+	<div class="frame image thumb-container-small" *ngIf="imageTmp.url">
 		<button class="delete" (click)="rmImg()"><i class="fas fa-times"></i></button>
 	  <img class="thumbnail" [src]="imageService.getImgSrc1(imageTmp)" alt="question image">
 	</div>
