--- a/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.scss
+++ b/front-end/src/app/core/questions/question-form-modal/question-form-modal.component.scss
@@ -4,6 +4,10 @@
 
 @import 'src/styles/layout.scss';
 
+.new-question-form{
+    margin-left: auto;
+    margin-right: auto;
+}
 
 .label {
     //margin-top: 0.5em;
