--- a/front-end/src/styles/images.scss
+++ b/front-end/src/styles/images.scss
@@ -1,5 +1,10 @@
 @import "./variables";
 
+.thumb-container-small {
+    height: 30%;
+    width: 25%;
+}
+
 .thumbnail {
     object-fit: cover;
     display: block; 
