--- a/front-end/src/app/core/database-image-modal/database-image-modal.component.html
+++ b/front-end/src/app/core/database-image-modal/database-image-modal.component.html
@@ -1,6 +1,6 @@
 
-<label for="modal-imageDBQuiz" class="button-card chargingButton ">Banque d'images</label>
-<button type="button" class="hidden" id="modal-imageDBQuiz" (click)="modalService.open(imgdbmodal)"></button>
+<label for="modal-databaseimage{{id}}" class="button-card chargingButton ">Banque d'images</label>
+<button type="button" class="hidden" id="modal-databaseimage{{id}}" (click)="modalService.open(imgdbmodal)"></button>
 
 
 <ng-template #imgdbmodal let-modal>
