--- a/front-end/src/app/core/internet-image-modal/internet-image-modal.component.html
+++ b/front-end/src/app/core/internet-image-modal/internet-image-modal.component.html
@@ -1,5 +1,5 @@
-<label for="modal-imageWebQuiz" class="button-card chargingButton">Internet</label>
-<button type="button" class="hidden" id="modal-imageWebQuiz" (click)="modalService.open(weburlmodal)"></button>
+<label for="modal-imageWeb{{id}}" class="button-card chargingButton">Internet</label>
+<button type="button" class="hidden" id="modal-imageWeb{{id}}" (click)="modalService.open(weburlmodal)"></button>
 
 
 <ng-template #weburlmodal let-modal>
