--- a/front-end/src/app/core/answers/answer-form/answer-form.component.scss
+++ b/front-end/src/app/core/answers/answer-form/answer-form.component.scss
@@ -14,43 +14,7 @@
     //width: 30%;//50%
 }
 
-.buttons-bottom {
-    margin-top: 1em;
-}
-.responsive-list {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-
-    align-items: center;
-    justify-content: center;
-}
-
-.frame-list{
-    height: 100px;//à revoir
-    width: 100px;
+.new-answer-form{
     margin-left: auto;
     margin-right: auto;
-    //border-style: dashed;
-    border-color:  rgb(243, 58, 144);
-
-}
-.thumbnail-list {
-    object-fit: cover;
-    display: block; 
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;//80px;
-    width: 100%;//100px
-}
-.button-list {
-    padding: 0;
-}
-.frame-little {
-    margin-left: auto;
-    margin-right: auto;
-    border-style: dashed;
-    border-color:  rgb(243, 58, 144);
-    height: 30%;
-    width: 30%;
 }
