--- a/front-end/src/app/core/questions/question-view/question-view.component.html
+++ b/front-end/src/app/core/questions/question-view/question-view.component.html
@@ -1,7 +1,7 @@
 <button class="button-card" *ngIf ="!question || question && !invalid()" (click)="goBack();"> Retour </button>
 <button class="button-card" *ngIf ="question && invalid()" (click)="modalService.open(quitWithInvalidQuestion)"> Retour </button>
 
-<div class = "horizontal-center" *ngIf="quiz && question && (image||!question.imageId)">
+<div class = "horizontal-center" *ngIf="allIsLoaded()">
     <h1>Quiz : {{quiz.name}}</h1>
     
     <div class="horizontal-center ">
@@ -21,7 +21,7 @@
 
     <div class="answer-list">
         <div *ngFor="let answer of question.answers">
-                <app-answer-form [answer]="answer" [question]="question" [quiz]="quiz"></app-answer-form>
+                <app-answer-view [answer]="answer" [question]="question" [quiz]="quiz"></app-answer-view>
         </div>
     </div>
 
