--- a/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.html
+++ b/front-end/src/app/core/quizzes/quiz-form-modal/quiz-form-modal.component.html
@@ -29,7 +29,7 @@
 
 <ng-template #displayImage>  
   <div class="frame image thumb-container-small" *ngIf="imageTmp.url">
-      <button class="delete" (click)="rmImg()">	<i class="fas fa-times"></i></button>
+      <button class="delete" (click)="imageService.removeImg(imageTmp)">	<i class="fas fa-times"></i></button>
       <img class="thumbnail" [src]="imageService.getImgSrc1(imageTmp)" alt="quiz image">
 </div>
 </ng-template>
